--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,20 +1,57 @@
 project:
   type: website
+  execute-dir: project
   output-dir: docs
 
 website:
-  title: "BSTA_511_F24"
+  title: "BSTA 511/611 Fall 2024"
   navbar:
-    left:
+    background: primary
+    search: true
+    logo: "images/IMG_7897_med.png"
+    foreground: "#fff"
+    collapse-below: sm
+    right:
       - href: index.qmd
         text: Home
-      - about.qmd
-
+      - href: schedule.qmd
+        text: Schedule
+      # - href: class_slides.qmd
+      #   text: Slides
+      # - href: weeks.qmd
+      #   text: Weeks
+      # - href: homework.qmd
+      #   text: Homework
+      # - href: homework_solutions.qmd
+      #   text: Homework solutions
+      # - href: about.qmd
+      #   text: About
+  sidebar:
+    style: "docked"
+    search: true
+    collapse-level: 4
+    contents:
+      - href: index.qmd
+        text: Home
+      - href: instructors.qmd
+        text: Instructors        
+      - href: schedule.qmd
+        text: Schedule
+      # - href: class_slides.qmd
+      #   text: Slides
+      # - href: weeks.qmd
+      #   text: Weeks
+      # - href: homework.qmd
+      #   text: Homework
+      # - href: homework_solutions.qmd
+      #   text: Homework solutions
+            
 format:
   html:
-    theme: cosmo
+    theme:
+      - sandstone
+      - custom.scss
     css: styles.css
     toc: true
-
 
 
