--- a/_quarto.yml
+++ b/_quarto.yml
@@ -45,6 +45,8 @@ website:
             text: Week 1
           - href: weeks/week_02.qmd
             text: Week 2
+          - href: weeks/week_03.qmd
+            text: Week 3            
       # - href: weeks.qmd
       #   text: Weeks
       # - href: class_slides.qmd
