--- a/_quarto.yml
+++ b/_quarto.yml
@@ -51,6 +51,8 @@ website:
             text: Week 4  
           - href: weeks/week_05.qmd
             text: Week 5  
+          - href: weeks/week_06.qmd
+            text: Week 6 
       # - href: weeks.qmd
       #   text: Weeks
       # - href: class_slides.qmd
