--- a/_quarto.yml
+++ b/_quarto.yml
@@ -53,6 +53,8 @@ website:
             text: Week 5  
           - href: weeks/week_06.qmd
             text: Week 6 
+          - href: weeks/week_07.qmd
+            text: Week 7 
       # - href: weeks.qmd
       #   text: Weeks
       # - href: class_slides.qmd
