--- a/_quarto.yml
+++ b/_quarto.yml
@@ -55,6 +55,8 @@ website:
             text: Week 6 
           - href: weeks/week_07.qmd
             text: Week 7 
+          - href: weeks/week_08.qmd
+            text: Week 8 
       # - href: weeks.qmd
       #   text: Weeks
       # - href: class_slides.qmd
