--- a/_quarto.yml
+++ b/_quarto.yml
@@ -59,6 +59,8 @@ website:
             text: Week 8 
           - href: weeks/week_09.qmd
             text: Week 9 
+          - href: weeks/week_10.qmd
+            text: Week 10 
       # - href: weeks.qmd
       #   text: Weeks
       # - href: class_slides.qmd
